random_visa/adapters/inbound/parser/antlr/JibParser.py
# Generated from /Volumes/External/Code/random_vISA/random_visa/adapters/inbound/parser/antlr/Jib.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JibParser ( Parser ):

    grammarFileName = "Jib.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'enum'", "'='", "'{'", "'}'", "';'", 
                     "'struct'", "','", "'union'", "'type'", "':'", "'register'", 
                     "'global'", "'val'", "'('", "')'", "'->'", "'fn'", 
                     "'unit'", "'bool'", "'bit'", "'int'", "'lint'", "'nat'", 
                     "'string'", "'real'", "'i'", "'bv'", "'bits'", "'lbits'", 
                     "'vector'", "'fvector'", "'label'", "'var'", "'local'", 
                     "'copy'", "'call'", "'jump'", "'goto'", "'if'", "'then'", 
                     "'else'", "'jump_if'", "'return'", "'end'", "'fail'", 
                     "'clear'", "'.'", "'['", "']'", "'~'", "'!'", "'-'", 
                     "'+'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", "'<<'", 
                     "'>>'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'()'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PRAGMA_DIRECTIVE", "BOOL_LITERAL", "HEX_LITERAL", 
                      "BIN_LITERAL", "INT_LITERAL", "STRING_LITERAL", "ID", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "WS" ]

    RULE_spec = 0
    RULE_topLevelItem = 1
    RULE_pragmaDirective = 2
    RULE_typeDef = 3
    RULE_enumFieldList = 4
    RULE_structField = 5
    RULE_unionField = 6
    RULE_registerDecl = 7
    RULE_globalDecl = 8
    RULE_valDecl = 9
    RULE_functionDef = 10
    RULE_paramList = 11
    RULE_param = 12
    RULE_jibType = 13
    RULE_instruction = 14
    RULE_labelDecl = 15
    RULE_varDecl = 16
    RULE_assignInst = 17
    RULE_copyInst = 18
    RULE_primInst = 19
    RULE_callInst = 20
    RULE_jumpInst = 21
    RULE_branchInst = 22
    RULE_returnInst = 23
    RULE_endInst = 24
    RULE_clearInst = 25
    RULE_cval = 26
    RULE_expr = 27
    RULE_fieldInit = 28
    RULE_literal = 29

    ruleNames =  [ "spec", "topLevelItem", "pragmaDirective", "typeDef", 
                   "enumFieldList", "structField", "unionField", "registerDecl", 
                   "globalDecl", "valDecl", "functionDef", "paramList", 
                   "param", "jibType", "instruction", "labelDecl", "varDecl", 
                   "assignInst", "copyInst", "primInst", "callInst", "jumpInst", 
                   "branchInst", "returnInst", "endInst", "clearInst", "cval", 
                   "expr", "fieldInit", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    PRAGMA_DIRECTIVE=69
    BOOL_LITERAL=70
    HEX_LITERAL=71
    BIN_LITERAL=72
    INT_LITERAL=73
    STRING_LITERAL=74
    ID=75
    BLOCK_COMMENT=76
    LINE_COMMENT=77
    WS=78

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JibParser.EOF, 0)

        def topLevelItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JibParser.TopLevelItemContext)
            else:
                return self.getTypedRuleContext(JibParser.TopLevelItemContext,i)


        def getRuleIndex(self):
            return JibParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = JibParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 146242) != 0) or _la==69:
                self.state = 60
                self.topLevelItem()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(JibParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDef(self):
            return self.getTypedRuleContext(JibParser.TypeDefContext,0)


        def registerDecl(self):
            return self.getTypedRuleContext(JibParser.RegisterDeclContext,0)


        def globalDecl(self):
            return self.getTypedRuleContext(JibParser.GlobalDeclContext,0)


        def valDecl(self):
            return self.getTypedRuleContext(JibParser.ValDeclContext,0)


        def functionDef(self):
            return self.getTypedRuleContext(JibParser.FunctionDefContext,0)


        def pragmaDirective(self):
            return self.getTypedRuleContext(JibParser.PragmaDirectiveContext,0)


        def getRuleIndex(self):
            return JibParser.RULE_topLevelItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelItem" ):
                listener.enterTopLevelItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelItem" ):
                listener.exitTopLevelItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelItem" ):
                return visitor.visitTopLevelItem(self)
            else:
                return visitor.visitChildren(self)




    def topLevelItem(self):

        localctx = JibParser.TopLevelItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelItem)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 6, 8, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.typeDef()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.registerDecl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.globalDecl()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.valDecl()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.functionDef()
                pass
            elif token in [69]:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.pragmaDirective()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRAGMA_DIRECTIVE(self):
            return self.getToken(JibParser.PRAGMA_DIRECTIVE, 0)

        def getRuleIndex(self):
            return JibParser.RULE_pragmaDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaDirective" ):
                listener.enterPragmaDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaDirective" ):
                listener.exitPragmaDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPragmaDirective" ):
                return visitor.visitPragmaDirective(self)
            else:
                return visitor.visitChildren(self)




    def pragmaDirective(self):

        localctx = JibParser.PragmaDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pragmaDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(JibParser.PRAGMA_DIRECTIVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JibParser.RULE_typeDef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UnionTypeDefContext(TypeDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JibParser.TypeDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(JibParser.ID, 0)
        def unionField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JibParser.UnionFieldContext)
            else:
                return self.getTypedRuleContext(JibParser.UnionFieldContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionTypeDef" ):
                listener.enterUnionTypeDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionTypeDef" ):
                listener.exitUnionTypeDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionTypeDef" ):
                return visitor.visitUnionTypeDef(self)
            else:
                return visitor.visitChildren(self)


    class AliasTypeDefContext(TypeDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JibParser.TypeDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(JibParser.ID, 0)
        def jibType(self):
            return self.getTypedRuleContext(JibParser.JibTypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAliasTypeDef" ):
                listener.enterAliasTypeDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAliasTypeDef" ):
                listener.exitAliasTypeDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAliasTypeDef" ):
                return visitor.visitAliasTypeDef(self)
            else:
                return visitor.visitChildren(self)


    class EnumTypeDefContext(TypeDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JibParser.TypeDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(JibParser.ID, 0)
        def enumFieldList(self):
            return self.getTypedRuleContext(JibParser.EnumFieldListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumTypeDef" ):
                listener.enterEnumTypeDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumTypeDef" ):
                listener.exitEnumTypeDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumTypeDef" ):
                return visitor.visitEnumTypeDef(self)
            else:
                return visitor.visitChildren(self)


    class StructTypeDefContext(TypeDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JibParser.TypeDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(JibParser.ID, 0)
        def structField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JibParser.StructFieldContext)
            else:
                return self.getTypedRuleContext(JibParser.StructFieldContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructTypeDef" ):
                listener.enterStructTypeDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructTypeDef" ):
                listener.exitStructTypeDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructTypeDef" ):
                return visitor.visitStructTypeDef(self)
            else:
                return visitor.visitChildren(self)



    def typeDef(self):

        localctx = JibParser.TypeDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDef)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = JibParser.EnumTypeDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(JibParser.T__0)
                self.state = 79
                self.match(JibParser.ID)
                self.state = 80
                self.match(JibParser.T__1)
                self.state = 81
                self.match(JibParser.T__2)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==75:
                    self.state = 82
                    self.enumFieldList()


                self.state = 85
                self.match(JibParser.T__3)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 86
                    self.match(JibParser.T__4)


                pass
            elif token in [6]:
                localctx = JibParser.StructTypeDefContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(JibParser.T__5)
                self.state = 90
                self.match(JibParser.ID)
                self.state = 91
                self.match(JibParser.T__1)
                self.state = 92
                self.match(JibParser.T__2)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==75:
                    self.state = 93
                    self.structField()
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==7:
                        self.state = 94
                        self.match(JibParser.T__6)
                        self.state = 95
                        self.structField()
                        self.state = 100
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 103
                self.match(JibParser.T__3)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 104
                    self.match(JibParser.T__4)


                pass
            elif token in [8]:
                localctx = JibParser.UnionTypeDefContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.match(JibParser.T__7)
                self.state = 108
                self.match(JibParser.ID)
                self.state = 109
                self.match(JibParser.T__1)
                self.state = 110
                self.match(JibParser.T__2)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==75:
                    self.state = 111
                    self.unionField()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==7:
                        self.state = 112
                        self.match(JibParser.T__6)
                        self.state = 113
                        self.unionField()
                        self.state = 118
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 121
                self.match(JibParser.T__3)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 122
                    self.match(JibParser.T__4)


                pass
            elif token in [9]:
                localctx = JibParser.AliasTypeDefContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.match(JibParser.T__8)
                self.state = 126
                self.match(JibParser.ID)
                self.state = 127
                self.match(JibParser.T__1)
                self.state = 128
                self.jibType()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 129
                    self.match(JibParser.T__4)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumFieldListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JibParser.ID)
            else:
                return self.getToken(JibParser.ID, i)

        def getRuleIndex(self):
            return JibParser.RULE_enumFieldList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumFieldList" ):
                listener.enterEnumFieldList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumFieldList" ):
                listener.exitEnumFieldList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumFieldList" ):
                return visitor.visitEnumFieldList(self)
            else:
                return visitor.visitChildren(self)




    def enumFieldList(self):

        localctx = JibParser.EnumFieldListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enumFieldList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(JibParser.ID)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 135
                self.match(JibParser.T__6)
                self.state = 136
                self.match(JibParser.ID)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JibParser.ID, 0)

        def jibType(self):
            return self.getTypedRuleContext(JibParser.JibTypeContext,0)


        def getRuleIndex(self):
            return JibParser.RULE_structField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructField" ):
                listener.enterStructField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructField" ):
                listener.exitStructField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructField" ):
                return visitor.visitStructField(self)
            else:
                return visitor.visitChildren(self)




    def structField(self):

        localctx = JibParser.StructFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(JibParser.ID)
            self.state = 143
            self.match(JibParser.T__9)
            self.state = 144
            self.jibType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionFieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JibParser.ID, 0)

        def jibType(self):
            return self.getTypedRuleContext(JibParser.JibTypeContext,0)


        def getRuleIndex(self):
            return JibParser.RULE_unionField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionField" ):
                listener.enterUnionField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionField" ):
                listener.exitUnionField(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionField" ):
                return visitor.visitUnionField(self)
            else:
                return visitor.visitChildren(self)




    def unionField(self):

        localctx = JibParser.UnionFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_unionField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(JibParser.ID)
            self.state = 147
            self.match(JibParser.T__9)
            self.state = 148
            self.jibType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegisterDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JibParser.ID, 0)

        def jibType(self):
            return self.getTypedRuleContext(JibParser.JibTypeContext,0)


        def getRuleIndex(self):
            return JibParser.RULE_registerDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterDecl" ):
                listener.enterRegisterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterDecl" ):
                listener.exitRegisterDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegisterDecl" ):
                return visitor.visitRegisterDecl(self)
            else:
                return visitor.visitChildren(self)




    def registerDecl(self):

        localctx = JibParser.RegisterDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_registerDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(JibParser.T__10)
            self.state = 151
            self.match(JibParser.ID)
            self.state = 152
            self.match(JibParser.T__9)
            self.state = 153
            self.jibType()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 154
                self.match(JibParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(JibParser.ID, 0)

        def jibType(self):
            return self.getTypedRuleContext(JibParser.JibTypeContext,0)


        def expr(self):
            return self.getTypedRuleContext(JibParser.ExprContext,0)


        def getRuleIndex(self):
            return JibParser.RULE_globalDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalDecl" ):
                listener.enterGlobalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalDecl" ):
                listener.exitGlobalDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalDecl" ):
                return visitor.visitGlobalDecl(self)
            else:
                return visitor.visitChildren(self)




    def globalDecl(self):

        localctx = JibParser.GlobalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_globalDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(JibParser.T__11)
            self.state = 158
            self.match(JibParser.ID)
            self.state = 159
            self.match(JibParser.T__9)
            self.state = 160
            self.jibType()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 161
                self.match(JibParser.T__1)
                self.state = 162
                self.expr()


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 165
                self.match(JibParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
